--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
+    "axios": "^0.21.1",
     "core-js": "^2.6.5",
     "vant": "^2.12.24",
     "vue": "^2.6.10",
@@ -25,6 +27,7 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "lint-staged": "^8.1.5",
+    "postcss-pxtorem": "^5.1.1",
     "vue-template-compiler": "^2.6.10"
   },
   "gitHooks": {
