--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^0.21.1",
     "core-js": "^2.6.5",
+    "dayjs": "^1.10.6",
     "vant": "^2.12.24",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
