--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "lint-staged": "^8.1.5",
+    "loadsh": "0.0.4",
     "postcss-pxtorem": "^5.1.1",
     "vue-template-compiler": "^2.6.10"
   },
