--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "core-js": "^2.6.5",
     "dayjs": "^1.10.6",
+    "json-bigint": "^1.0.0",
     "vant": "^2.12.24",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
