--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "amfe-flexible": "^2.2.1",
     "axios": "^0.21.1",
     "core-js": "^2.6.5",
+    "cropperjs": "^1.5.12",
     "dayjs": "^1.10.6",
     "json-bigint": "^1.0.0",
     "vant": "^2.12.24",
