--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cropperjs": "^1.5.12",
     "dayjs": "^1.10.6",
     "json-bigint": "^1.0.0",
+    "socket.io": "^4.1.3",
     "vant": "^2.12.24",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
